--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -89,6 +89,6 @@ jobs:
       uses: aws-actions/amazon-ecs-deploy-task-definition@v1
       with:
         task-definition: ${{ steps.task-def.outputs.task-definition }}
-        service: ${{ env.ECS_SERVICE }}
+        service: "arn:aws:ecs:ap-south-1:419591513418:service/app_cluster/app-service"
         cluster: ${{ env.ECS_CLUSTER }}
         wait-for-service-stability: true
