--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -91,4 +91,4 @@ jobs:
         task-definition: ${{ steps.task-def.outputs.task-definition }}
         service: "arn:aws:ecs:ap-south-1:419591513418:service/app_cluster/app-service"
         cluster: "arn:aws:ecs:ap-south-1:419591513418:cluster/app_cluster"
-        wait-for-service-stability: true
+        wait-for-service-stability: false
