--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -78,7 +78,7 @@ jobs:
         echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
 
     - name: Fill in the new image ID in the Amazon ECS task definition
-      id: task-def
+      id: td
       uses: aws-actions/amazon-ecs-render-task-definition@v1
       with:
         task-definition: ${{ env.ECS_TASK_DEFINITION }}
@@ -88,7 +88,7 @@ jobs:
     - name: Deploy Amazon ECS task definition
       uses: aws-actions/amazon-ecs-deploy-task-definition@v1
       with:
-        task-definition: ${{ steps.task-def.outputs.task-definition }}
+        task-definition: ${{ steps.task-def-1.outputs.task-definition }}
         service: "arn:aws:ecs:ap-south-1:419591513418:service/app_cluster/app-service"
         cluster: ${{ env.ECS_CLUSTER }}
         wait-for-service-stability: false
